fixed text align for blue

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ div{
 }
 .blue{
     background-color: #0000ff;
-    text-align: right;
+    text-align: left;
     margin-right:50px;
     border-right: 5px;
     border-top: 2px;
